# karl

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  code.karl  format_count.sh  lex.l  main.cpp  run.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-linux-gcc.yml  build-macos.yml  ci.yml
ext/: CMakeLists.txt
src/: CMakeLists.txt  grammar.y  grammer.y  lex.l  main.cpp
test/: CMakeLists.txt  simple_test.cpp  util.h
testsuite/simple/: code.karl
